# ICH_Internship

./: .dockerignore  .flake8  .gitignore  .gitlint  .pre-commit-config.yaml  Dockerfile  README.md  check_branch_name.sh  pyproject.toml
auto_graders/: admin.py  apps.py  informative_test_case.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
auto_graders/choices/: roles_choices.py
auto_graders/constants/: __init__.py  constants_for_tests.py
auto_graders/middlewares/: __init__.py  automatic_jwt_token.py
auto_graders/migrations/: 0001_initial.py
auto_graders/tests/: build_dynamic_list_from_input_test.py  check_if_string_is_pangram_test.py  check_year_is_leap_test.py  circle_circumference_and_area_calculator_test.py  filter_students_by_avg_grade_test.py  first_n_fibonacci_numbers_test.py  greeting_task_test.py  guess_number_test.py  if_it_contains_only_unique_characters_test.py  is_number_a_palindrome_test.py  modify_list_task_test.py  num_list_sum_min_max_test.py  operations_with_numbers_task_test.py  pair_elements_from_lists_using_zip_test.py  program_to_checks_whether_set1_is_subset_of_set2_test.py  remove_vowels_from_a_string_test.py  reverse_words_in_a_sentence_test.py  sort_3_nums_in_ascending_test.py  sum_product_task_test.py  vowels_consonants_count_test.py  word_lengths_task_test.py
config/: settings.py  urls.py
